[package]
name = "sgmm"
version = "0.1.0"
authors = ["M*C*O <mcofficer@gmx.de>"]
edition = "2018"

[dependencies]
ureq = { version = "1.2", default_features = false, features = ["json", "tls"] }
serde = { version = "1.0.112", features = ["derive"] }
clap = { version = "3.0.0-beta.1", default_features = false, features = ["suggestions", "color", "std", "cargo"] }
anyhow = "1.0"
regex = "1.3.9"
zip = { version = "0.5.6", default_features = false, features = ["deflate"] }
colour = "0.5"
